[tool.poetry]
name = "tasks-10-1"
version = "0.1.0"
description = ""
authors = ["Petr Maev <petr.maev94@gmail.com>"]
readme = "README.md"
packages = [{include = "tasks_10"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
